@@ -1,5 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
+Phoronix Test Suite (Git)
+
+pts-core: Drop auto-compare sub-command since currently buggy / too server resource intensive
+
 Phoronix Test Suite 9.2.0 Milestone 1
 17 October 2019
 
